Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-110328

QEventPoint not being released correctly

    XMLWordPrintable

Details

    • macOS, Windows
    • f21f1d47e (dev), a48055130 (6.6), d18fc6b1c (6.5)

    Description

      Running the attached sample code gives a warning of a failed Q_ASSERT at line 217. The point with id of 0 is not released properly when QQuickOverlay 'overlay', as the child of QQuickWindow 'window', also has its own child, i.e., QQuickItem. If the QQuickItem is commented, the program runs just fine. 

       

      According to customer, the issue is:

      'The cleanup code which runs setExclusiveGrabber(nullptr) found in "bool QQuickWindow::event(QEvent *event)" is never run. This is because the overlay uses an event filter on the QQuickWindow when it has a child and runs its own flawed version of event handling, which does not do the same cleanup.'

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vhilshei Volker Hilsheimer
            luqiaochen Luqiao Chen
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes