src/quick/items/qquickwindow.cpp
@@ -1325,6 +1325,41 @@ QObject *QQuickWindow::focusObject() const
     return const_cast<QQuickWindow*>(this);
 }
 
+/*!
+    \internal
+
+    Clears all exclusive and passive grabs for the points in \a pointerEvent.
+
+    We never allow any kind of grab to persist after release, unless we're waiting
+    for a synth event from QtGui (as with most tablet events), so for points that
+    are fully released, the grab is cleared.
+
+    Called when QQuickWindow::event dispatches events, or when the QQuickOverlay
+    has filtered an event so that it bypasses normal delivery.
+*/
+void QQuickWindowPrivate::clearGrabbers(QPointerEvent *pointerEvent)
+{
+    if (pointerEvent->isEndEvent()
+        && !(QQuickDeliveryAgentPrivate::isTabletEvent(pointerEvent)
+             && (qApp->testAttribute(Qt::AA_SynthesizeMouseForUnhandledTabletEvents)
+                 || QWindowSystemInterfacePrivate::TabletEvent::platformSynthesizesMouse))) {
+        if (pointerEvent->isSinglePointEvent()) {
+            if (static_cast<QSinglePointEvent *>(pointerEvent)->buttons() == Qt::NoButton) {
+                auto &firstPt = pointerEvent->point(0);
+                pointerEvent->setExclusiveGrabber(firstPt, nullptr);
+                pointerEvent->clearPassiveGrabbers(firstPt);
+            }
+        } else {
+            for (auto &point : pointerEvent->points()) {
+                if (point.state() == QEventPoint::State::Released) {
+                    pointerEvent->setExclusiveGrabber(point, nullptr);
+                    pointerEvent->clearPassiveGrabbers(point);
+                }
+            }
+        }
+    }
+}
+
 /*! \reimp */
 bool QQuickWindow::event(QEvent *event)
 {
@@ -1467,26 +1502,7 @@ bool QQuickWindow::event(QEvent *event)
         // or fix QTBUG-90851 so that the event always has points?
         bool ret = (da && da->event(event));
 
-        // failsafe: never allow any kind of grab to persist after release,
-        // unless we're waiting for a synth event from QtGui (as with most tablet events)
-        if (pe->isEndEvent() && !(QQuickDeliveryAgentPrivate::isTabletEvent(pe) &&
-                                  (qApp->testAttribute(Qt::AA_SynthesizeMouseForUnhandledTabletEvents) ||
-                                   QWindowSystemInterfacePrivate::TabletEvent::platformSynthesizesMouse))) {
-            if (pe->isSinglePointEvent()) {
-                if (static_cast<QSinglePointEvent *>(pe)->buttons() == Qt::NoButton) {
-                    auto &firstPt = pe->point(0);
-                    pe->setExclusiveGrabber(firstPt, nullptr);
-                    pe->clearPassiveGrabbers(firstPt);
-                }
-            } else {
-                for (auto &point : pe->points()) {
-                    if (point.state() == QEventPoint::State::Released) {
-                        pe->setExclusiveGrabber(point, nullptr);
-                        pe->clearPassiveGrabbers(point);
-                    }
-                }
-            }
-        }
+        d->clearGrabbers(pe);
 
         if (ret)
             return true;
